# CrptoAudit

./: .gitignore  .pre-commit-config.yaml  DOCKER_INFRASTRUCTURE.md  FILES_CREATED.txt  IMPLEMENTATION_SUMMARY.md  README.md  SEED_DATA_README.md  TESTING.md  TEST_FILES_INDEX.md  TEST_SUITE_SUMMARY.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  security.yml
api/: openapi.yaml
backend/: .env.example  .flake8  API_ENDPOINTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  ai.py  assets.py  auth.py  blockchain.py  engagements.py  merkle.py  onboarding.py  reports.py  reserves.py  tenants.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: __init__.py  audit_log.py  telemetry.py  tenant.py
backend/app/schemas/: asset.py  engagement.py  merkle.py  user.py
backend/app/services/: __init__.py
backend/app/services/ai/: __init__.py  anomaly_detector.py  compliance_engine.py  llama_agent.py
backend/app/services/blockchain/: __init__.py  base_adapter.py  bitcoin_adapter.py  bnb_adapter.py  defi_verifier.py  ethereum_adapter.py  multi_chain_adapter.py  solana_adapter.py  xrp_adapter.py
backend/app/services/merkle/: __init__.py  customer_verifier.py  merkle_engine.py
backend/app/services/reports/: __init__.py  por_report_generator.py
backend/app/tasks/: __init__.py  celery_app.py  reconciliation_tasks.py  report_tasks.py  verification_tasks.py
backend/app/utils/: pagination.py  validators.py
backend/tests/: __init__.py  conftest.py  factories.py  run_tests.sh
backend/tests/integration/: __init__.py  test_auth_api.py  test_engagement_api.py  test_merkle_api.py  test_onboarding_api.py  test_reserves_api.py
backend/tests/mocks/: blockchain_mocks.py
backend/tests/unit/: __init__.py  test_anomaly_detector.py  test_compliance_engine.py  test_merkle_engine.py  test_reserve_calculations.py  test_security.py  test_validators.py
db/schema/: erd.md
db/seed/: 01_tenants.sql  02_users.sql  03_roles_permissions.sql  04_crypto_assets.sql  05_engagements.sql  06_wallets_balances.sql  07_customer_liabilities.sql  08_merkle_trees.sql  09_reconciliation.sql  10_transactions_audit.sql  seed.sh
db/seed/fixtures/: engagements.json  users.json
docs/: acceptance_checklist.md  explainability.md  integrations_catalog.md  model_metrics_report.md  personas_and_journeys.md  runbook.md  testing_strategy.md
frontend/: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  DELIVERABLES.md  Dockerfile  README.md  nginx.conf  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.css
frontend/src/components/audit/: ComplianceScorecard.jsx  VerificationTimeline.jsx
frontend/src/components/common/: Button.jsx  Card.jsx  DataTable.jsx  LoadingSpinner.jsx  Modal.jsx  PermissionGate.jsx  StatCard.jsx  StatusBadge.jsx
frontend/src/components/dashboard/: ReserveRatioChart.jsx
frontend/src/components/layout/: Header.jsx  Layout.jsx  Sidebar.jsx
frontend/src/hooks/: useAuth.js  useEngagement.js  usePermissions.js  useWebSocket.js
frontend/src/pages/: NotFoundPage.jsx
frontend/src/pages/admin/: AdminAuditLogsPage.jsx  AdminSettingsPage.jsx  AdminTenantsPage.jsx  AdminUsersPage.jsx  RoleBuilder.jsx
frontend/src/pages/assets/: AssetDetailPage.jsx  AssetsPage.jsx
frontend/src/pages/auth/: ForgotPasswordPage.jsx  LoginPage.jsx  RegisterPage.jsx
frontend/src/pages/blockchain/: BlockchainExplorer.jsx  BlockchainPage.jsx
frontend/src/pages/customer/: CustomerVerification.jsx
frontend/src/pages/dashboard/: AuditorDashboard.jsx  DashboardPage.jsx  VASPDashboard.jsx
frontend/src/pages/engagements/: CreateEngagementPage.jsx  EngagementDetail.jsx  EngagementDetailPage.jsx  EngagementsPage.jsx
frontend/src/pages/merkle/: MerkleDetailPage.jsx  MerkleTreeVisualization.jsx  MerkleTreesPage.jsx
frontend/src/pages/onboarding/: OnboardingWizard.jsx
frontend/src/pages/reports/: ReportBuilder.jsx  ReportDetailPage.jsx  ReportsPage.jsx
frontend/src/pages/settings/: ProfileSettingsPage.jsx  SecuritySettingsPage.jsx
frontend/src/services/: adminService.js  api.js  assetService.js  authService.js  blockchainService.js  dashboardService.js  engagementService.js  merkleService.js  reportService.js
frontend/src/store/: index.js
frontend/src/store/slices/: authSlice.js  dashboardSlice.js  engagementSlice.js  uiSlice.js
frontend/src/types/: index.js
frontend/src/utils/: constants.js  formatters.js  validators.js
infrastructure/nginx/: default.conf  nginx.conf
infrastructure/scripts/: deploy.sh  init_db.py  init_db.sql  rollback.sh  seed_demo_data.py
monitoring/grafana/dashboards/: ai_model_dashboard.json  por_platform_dashboard.json
monitoring/model_evaluation/: drift_detector.py  evaluate_models.py  red_team_tests.py
monitoring/otel/: otel-config.yaml
monitoring/prometheus/: alerts.yml
scripts/: demo.sh
tests/: __init__.py
tests/e2e/: __init__.py  conftest.py  test_customer_verification.py  test_full_audit_flow.py  test_rbac_enforcement.py
